Fixed double scroll in catalog

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -24,6 +24,10 @@ body {
   margin: 0;
   padding: 0;
   background-color: #292929;
+
+  &.lock {
+    overflow: hidden;
+  }
 }
 
 .button-fix {
